add interface user dashboard

--- a/equipment-management-frontend/src/app/PanneC/panne-equipment/panne-equipment-list.component.html
+++ b/equipment-management-frontend/src/app/PanneC/panne-equipment/panne-equipment-list.component.html
@@ -1,3 +1,23 @@
+<!--<div class="container">
+  <h2>Pannes et Équipements</h2>
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Panne Description</th>
+      <th>Equipment Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let panneEquipment of panneEquipments">
+      <td>{{ panneEquipment.id }}</td>
+      <td>{{ panneEquipment.panne.description }}</td>
+      <td>{{ panneEquipment.equipment.nom }}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+-->
 <div class="container">
   <h2>Pannes et Équipements</h2>
   <table class="table table-striped">
