final commit frontend

--- a/equipment-management-frontend/src/app/PanneC/panne-detail/panne-detail.component.css
+++ b/equipment-management-frontend/src/app/PanneC/panne-detail/panne-detail.component.css
@@ -1,54 +1,51 @@
-/* Container Styling */
+
 div {
   padding: 20px;
-  background-color: #fbbf24; /* Background color */
+  background-color: #fbbf24;
   border-radius: 8px;
-  border: 1px solid #1e3a8a; /* Border color */
+  border: 1px solid #1e3a8a;
   margin-bottom: 20px;
 }
 
-/* Title Styling */
+
 h2 {
-  color: #1e3a8a; /* Title color */
+  color: #1e3a8a;
   font-size: 24px;
   margin-bottom: 10px;
 }
 
-/* Paragraph Styling */
 p {
   font-size: 18px;
-  color: #333; /* Text color */
+  color: #333;
   margin-bottom: 10px;
 }
 
-/* Strong Element Styling */
 strong {
-  color: #1e3a8a; /* Strong text color */
+  color: #1e3a8a;
 }
 
-/* Subheading Styling */
+
 h3 {
-  color: #1e3a8a; /* Subheading color */
+  color: #1e3a8a;
   font-size: 20px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
-/* List Styling */
+
 ul {
-  list-style-type: none; /* Remove default list bullets */
+  list-style-type: none;
   padding: 0;
 }
 
 li {
   padding: 8px 0;
-  border-bottom: 1px solid #ddd; /* Separator line */
+  border-bottom: 1px solid #ddd;
   font-size: 16px;
 }
 
-/* Loading Message Styling */
 div p {
   font-size: 18px;
-  color: #333; /* Text color */
+  color: #333;
   text-align: center;
 }
