--- a/equipment-management-frontend/src/app/home/home.component.html
+++ b/equipment-management-frontend/src/app/home/home.component.html
@@ -14,7 +14,7 @@
 
   <section class="hero-section">
     <div class="hero-text">
-      <h2>Welcome to IT Solutions</h2>
+      <h2>Welcome to IT SolutionH</h2>
       <p>Your trusted partner in IT equipment management.</p>
     </div>
     <div class="hero-animation">
